[package]
name = "share_daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "fshare_server"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "share_daemon"
path = "src/main.rs"



[dependencies]
serde = { version = "*", features = ["derive"]}
toml = "*"
chrono = "*"
tokio = { version = "*", features = ["full"] }
interprocess = {version = "*", features = ["tokio"]}
ctrlc = "*"
constcat = "*"
smol_str = "*"
log = "*"
anyhow = "*"
dirs = "*"
env_logger = "*"