[package]
name = "share_daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "fshare_server"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "share_daemon"
path = "src/main.rs"


[dependencies]
dirs = "*"
ctrlc = "*"
log = "*"
env_logger = "*"
toml = "*"
clap = { workspace = true }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
interprocess = { workspace = true }
anyhow = { workspace = true }
smol_str = { workspace = true, features = ["default", "serde"] }
